--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 # Project exclude paths
 /out/
+.idea
+multihreadexam.iml
+MultithreadingExam.iml
+/client/client.iml
+/common/common.iml
+server/server.iml
